Fix super dashboard css on small screens

--- a/microservices/app/imports/client/pages/AppPage/SuperDashboard/SuperDashboard.scss
+++ b/microservices/app/imports/client/pages/AppPage/SuperDashboard/SuperDashboard.scss
@@ -23,6 +23,10 @@
     p {
       font-size: 1.3rem;
     }
+
+    h1 {
+      max-width: 50%;
+    }
   }
 }
 
@@ -57,6 +61,10 @@
       border-radius: 0;
     }
 
+    @include screen(small) {
+      padding: 16px;
+    }
+
     &-header {
       border-top-left-radius: $border-radius;
       border-top-right-radius: $border-radius;
@@ -71,6 +79,12 @@
       width: 100%;
       margin-bottom: 32px;
       height: 50%;
+
+      @include screen(small) {
+        margin: -16px;
+        padding: 16px;
+        margin-bottom: 16px;
+      }
 
       &-cover,
       img,
@@ -171,6 +185,33 @@
           > * {
             margin: 0 !important;
             margin-bottom: 16px !important;
+          }
+
+          @include screen(custom, max, 1440) {
+            span {
+              display: block;
+              text-overflow: ellipsis;
+              max-width: 200px;
+              overflow: hidden;
+            }
+          }
+
+          @include screen(custom, max, 1280) {
+            span {
+              max-width: 100px;
+            }
+          }
+
+          @include screen(large) {
+            span {
+              max-width: unset;
+            }
+          }
+
+          @include screen(custom, max, 500) {
+            span {
+              max-width: 100px;
+            }
           }
         }
       }
